# local-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  test_mcp_server.py
src/local_mcp/: __init__.py  __main.py  __main__.py  server.py
